--- a/company/summary.html
+++ b/company/summary.html
@@ -6,53 +6,95 @@
     <title>経営理念</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css">
     <link rel="stylesheet" href="../css/specimen.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    <header>
-        <div class="header-all">
-            <div class="header-upper">
-                <div class="header-logo">
-                    <a class=header-logo href="../index.html"><img src="../img/logo.jpg" alt="" height="50px"></a>
-                    <p class="logo-text">株式会社リライトホールディングス</p> 
-                </div>
+  <header>
+    <div class="header-all">
+        <div class="header-upper">
+            <div class="header-logo">
+                <a class=header-logo href="../index.html"><img src="../img/logo.jpg" alt="" height="50px"></a>
+                <p class="logo-text">株式会社リライトホールディングス</p> 
             </div>
-
-
-             <!-- ハンバーガーメニューのアイコン -->
-<div class="hamburger-menu">
-    <div class="bar"></div>
-    <div class="bar"></div>
-    <div class="bar"></div>
-</div>
-
-            <nav class="header-under">
-                <div class="index">
-                    <span class="close-btn">&times;</span>
-                    <ul>
-                        <li>
-                            <a class="index-text" href="../company.html">企業情報</a>
-                        </li>
-                    </ul>
-                    <ul>
-                        <li>
-                            <a class="index-text"  href="../business.html">事業内容</a>
-                        </li>
-                    </ul>
-                    <ul>
-                        <li>
-                            <a class="index-text"  href="../adoption.html">採用情報</a>
-                        </li>
-                    </ul>
-                    <ul>
-                        <li>
-                            <a class="index-text"  href="https://rewrite-hd.com/page3.html">お問い合わせ</a>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
+            <span class="material-icons" id="open-btn">menu</span>
+            <span class="material-icons" id="close-btn"
+              >close</span
+            >
         </div>
-    </header>
+
+
+         <!-- ハンバーガーメニューのアイコン -->
+
+        <nav class="header-under">
+            <div class="index">
+                <ul class="top">
+                    <li>
+                        <a class="index-text" href="../index.html">トップ <span class="index-text-english"> Top</span>
+                            </a>
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <div class="accordion">
+                        <a class="index-text" href="../company.html">企業情報 <span class="index-text-english">Company Info</span>
+                        </a>
+                        <button class="toggle-btn">＋</button>
+                        </div>
+                                <div class="accordion-content">
+                                    <a href="../company/message.html" class="index-more">-グループCEOメッセージ</a>
+                                    <a href="../company/mission.html" class="index-more">-グループミッション・経営理念</a>
+                                    <a href="../company/summary.html" class="index-more">-会社概要</a>
+                                    <a href="../company/partnar.html" class="index-more">-提携先企業一覧</a>
+                                  </div>
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <div class="accordion">
+                        <a class="index-text"  href="../business.html">事業内容 <span class="index-text-english">Business Description </span>
+                        </a>
+                        <button class="toggle-btn">＋</button>
+                   </div>
+                        <div class="accordion-content">
+                            <a href="../business/holdings.html" class="index-more">-ホールディングス事業</a>
+                            <a href="../business/group.html" class="index-more">-グループ会社紹介</a>
+                          </div>
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <div class="accordion">
+                        <a class="index-text"  href="../adoption.html">採用情報<span class="index-text-english"> Careers</span>
+                        </a>
+                        <button class="toggle-btn">＋</button>
+                    </div>
+                            <div class="accordion-content">
+                                <a href="../adoption/executive.html" class="index-more">-経営幹部採用</a>
+                                <a href="../adoption/employee.html" class="index-more">-社員採用</a>
+                                <a href="../adoption/part.html" class="index-more">-アルバイト採用</a>
+                              </div>
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <div class="accordion">
+                        <a class="index-text"  href="../contact.html">お問い合わせ <span class="index-text-english">Contact</span></a>
+                        <button class="toggle-btn">＋</button>
+                    </div>
+                            <div class="accordion-content">
+                                <a href="../contact/interviw.html" class="index-more">-会社、取材に関するお問い合わせ</a>
+                                <a href="../contact/adoption.html" class="index-more">-採用に関するお問い合わせ</a>
+                                <a href="../contact/cooperation.html" class="index-more">-業務提携に関するお問い合わせ</a>
+                                <a href="../contact/sales.html" class="index-more">-営業の方はこちら</a>
+                              </div>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </div>
+</header>
     <main class="l-main p-profile" id="profile">
 
         <!-- kv -->
@@ -88,7 +130,7 @@
             <p class="p-profile__listTxt">株式会社リライトホールディングス</p>
           </li>
           <li class="p-profile__listItem">
-            <p class="p-profile__listTtl">創業</p>
+            <p class="p-profile__listTtl">設立</p>
             <p class="p-profile__listTxt">2023年10月18日</p>
           </li>
           <li class="p-profile__listItem">
@@ -100,21 +142,21 @@
             <div class="p-profile__listTxt">
               <ul class="p-profile__listChild">
                 <li class="p-profile__listChildItem">
-                  <p class="p-profile__listChildPosition">代表取締役社長</p>
+                  <p class="p-profile__listChildPosition">代表取締役 CEO</p>
                   <p class="p-profile__listChildName">広永 勝太</p>
                 </li>
                 <li class="p-profile__listChildItem">
-                  <p class="p-profile__listChildPosition">取締役副社長</p>
+                  <p class="p-profile__listChildPosition">代表取締役</p>
                   <p class="p-profile__listChildName">西村 佳晃</p>
                 </li>
                 <li class="p-profile__listChildItem">
                   <p class="p-profile__listChildPosition">取締役</p>
                   <p class="p-profile__listChildName">大森 健一</p>
                 </li>
-                <li class="p-profile__listChildItem">
+                <!-- <li class="p-profile__listChildItem">
                   <p class="p-profile__listChildPosition">取締役</p>
                   <p class="p-profile__listChildName">松田 英士</p>
-                </li>
+                </li> -->
                 <!-- <li class="p-profile__listChildItem">
                   <p class="p-profile__listChildPosition">取締役</p>
                   <p class="p-profile__listChildName">大野　仁之</p>
@@ -153,7 +195,7 @@
           <li class="p-profile__listItem">
             <p class="p-profile__listTtl">本社</p>
             <div class="p-profile__listTxt">
-                滋賀県高島市安曇川町西万木189-3 花寿文化教室１F
+              〒520-1212<br>滋賀県高島市安曇川町西万木189-3 花寿文化教室１F
               <!-- <div class="p-profile__listMap">
                 <picture>
                   <source media="(max-width:750px)" srcset="/assets/img/company//profile/profile_map--sp.webp">
@@ -191,44 +233,72 @@
             </div>
           </div>
       </main>
-    <footer>
-        <div class="footer">
-            <div class="footer-text">
-                <h2>企業情報</h2>
-                <div class="detailes">
-                    <a href="../company/message.html">-グループCEOメッセージ</a>
-                    <a href="../company/mission.html">-グループミッション・経営理念</a>
-                    <a href="../company/summary.html">-会社概要</a>
-                    <a href="../company/partnar.html">-提携先企業一覧</a>
+      <footer>
+        <div class="footer-upper">
+        <ul class="footer-index">
+            <li>
+                <div class="accordion">
+                <a class="index-text" href="../company.html">企業情報 <span class="index-text-english">Company Info</span>
+                </a>
+                <button class="toggle-btn">＋</button>
                 </div>
+                        <div class="accordion-content">
+                            <a href="../company/message.html" class="index-more">-グループCEOメッセージ</a>
+                            <a href="../company/mission.html" class="index-more">-グループミッション・経営理念</a>
+                            <a href="../company/summary.html" class="index-more">-会社概要</a>
+                            <a href="../company/partnar.html" class="index-more">-提携先企業一覧</a>
+                          </div>
+            </li>
+        </ul>
+        <ul class="footer-index">
+            <li>
+                <div class="accordion">
+                <a class="index-text"  href="../business.html">事業内容 <span class="index-text-english">Business Description </span>
+                </a>
+                <button class="toggle-btn">＋</button>
+           </div>
+                <div class="accordion-content">
+                    <a href="../business/holdings.html" class="index-more">-ホールディングス事業</a>
+                    <a href="../business/group.html" class="index-more">-グループ会社紹介</a>
+                  </div>
+            </li>
+        </ul>
+        <ul class="footer-index">
+            <li>
+                <div class="accordion">
+                <a class="index-text"  href="../adoption.html">採用情報<span class="index-text-english"> Careers</span>
+                </a>
+                <button class="toggle-btn">＋</button>
             </div>
-            <div class="footer-text">
-                <h2>事業紹介</h2>
-                <div class="detailes">
-                    <a href="../business/holdings.html">-ホールディングス事業</a>
-                    <!-- <a href="business/subsidiary.html">-子会社の経営管理等</a> -->
-                    <a href="../business/group.html">-グループ会社紹介</a>
-                </div>
+                    <div class="accordion-content">
+                        <a href="../adoption/executive.html" class="index-more">-経営幹部採用</a>
+                        <a href="../adoption/employee.html" class="index-more">-社員採用</a>
+                        <a href="../adoption/part.html" class="index-more">-アルバイト採用</a>
+                      </div>
+            </li>
+        </ul>
+        <ul class="footer-index">
+            <li>
+                <div class="accordion">
+                <a class="index-text"  href="../contact.html">お問い合わせ <span class="index-text-english">Contact</span></a>
+                <button class="toggle-btn">＋</button>
             </div>
-            <div class="footer-text">
-                <h2>採用情報</h2>
-                <div class="detailes">
-                    <a href="../adoption/executive.html">-経営幹部採用</a>
-                    <a href="../adoption/employee.html">-社員採用社員採用</a>
-                    <a href="../adoption/part.html">-アルバイト採用</a>
-                </div>
-            </div>
-            <div class="footer-text">
-                <h2>お問い合わせ</h2>
-            </div>
-        </div>
+                    <div class="accordion-content">
+                        <a href="../contact/interviw.html" class="index-more">-会社、取材に関するお問い合わせ</a>
+                        <a href="../contact/adoption.html" class="index-more">-採用に関するお問い合わせ</a>
+                        <a href="../contact/cooperation.html" class="index-more">-業務提携に関するお問い合わせ</a>
+                        <a href="../contact/sales.html" class="index-more">-営業の方はこちら</a>
+                      </div>
+            </li>
+        </ul>
+    </div>
         <div class="copyright-tab">
             <a href="#"><img src="../img/logo.jpg" alt=""></a><br>
             <small class="copyright">&copy; REWRITE HOLDINGS all rights reserved.</small>
         </div>
     </footer>
       <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
-      <script src="../js/hamberger_btn.js"></script>
+      <script src="../js/main.js"></script>
       <script src="../js/script.js"></script>
 </body>
 </html>
